# ktoggle

./: .directory  CMakeLists.txt  build-instructions  readme.md
src/: .directory  CMakeLists.txt  DbusKwin.cpp  DbusKwin.h  Embedder.cpp  Embedder.h  KwinController.cpp  KwinController.h  MainWindow.cpp  TrayIcon.cpp  TrayIcon.h  launcher.h  main.cpp  resources.qrc
src/contents/script/: listWindows.js  runKwin.py
src/contents/ui/: KToggle.qml  create-component.js  main.qml
src/trash/: Embedder.cpp.bak  Embedder.h.bak  MainWindow.h  launcher.cpp
